--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: "lambda/package-lock.json"
-      - run: npm ci
-      - run: npm run build
+          cache: "yarn"
+          cache-dependency-path: "lambda/yarn.lock"
+      - run: yarn install --immutable
+      - run: yarn run build
